Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+0.6.1
+=====
+- Fix gio-unix 2.27 detection (bug #7124).
+- Allow installation of the helpers in a custom location.
+- Only compile demo application in make check (bug #7267).
+- Add Greek manual screenshots.
+- Remove mime-types from the exo helper desktop files (bug #7257).
+- Drop unused variable.
+- Make exo-compose-mail-1 case-insensitive (bug #7472).
+- Use portable abicheck.sh from xfconf.
+- Add missing linker flag.
+
 0.6.0
 =====
 - Add main category to exo-open desktop files.
