Update the NEWS file.
This time save the file...

--- a/NEWS
+++ b/NEWS
@@ -1,14 +1,17 @@
 0.6.1
 =====
-- Fix gio-unix 2.27 detection (bug #7124).
-- Allow installation of the helpers in a custom location.
-- Only compile demo application in make check (bug #7267).
-- Add Greek manual screenshots.
+- Improve exo-open url and email match regexes (bug #7281).
+- Create relative symlinks to doc images (bug #7379).
 - Remove mime-types from the exo helper desktop files (bug #7257).
 - Drop unused variable.
 - Make exo-compose-mail-1 case-insensitive (bug #7472).
 - Use portable abicheck.sh from xfconf.
 - Add missing linker flag.
+- Add Greek manual screenshots.
+- Only compile demo application in make check (bug #7267).
+- Allow installation of the helpers in a custom location.
+- Fix gio-unix 2.27 detection (bug #7124).
+- Translation updates: nl, pt_BR, ru, sk, sv.
 
 0.6.0
 =====
