Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+0.6.2
+=====
+- Fix preferred applications handling (bug #7140).
+- Translation updates: Dutch.
+
 0.6.1
 =====
 - Improve exo-open url and email match regexes (bug #7281).
