Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+0.7.1
+=====
+- Add preferred app helper for Chromium (bug #8398).
+- Remove package manuals and link to online documentation.
+- Queue an icon view resize if the requesitions don't match.
+- Add new API exo_icon_view_get_item_{column,row}.
+- Add keynav-failed to ExoIconView.
+- Show Preferred Application in settings category.
+- Don't destroy already destroyed widget.
+- Translation updates: Chinese, Portuguese, Lithuanian, Norwegian,
+  German, Bulgarian.
+
 0.7.0
 =====
 - Do not insert symlink icons in the icon chooser.
