Update for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+0.7.2
+=====
+- Drop gtk 2.24 api (bug #8461).
+- Bump libxfce4ui dependency for help function.
+- Send exo-open startup-id to child instead of using it (bug #7093).
+- Translation updates (ar, ca, cs, da, de, es, eu, fi, fr, he, id,
+  it, kk, ko, lt, nl, pl, pt, ru, sk, tr, uk, zh_CN, zh_TW).
+
 0.7.1
 =====
 - Add preferred app helper for Chromium (bug #8398).
