Rename "Novell Evolution" to "Evolution" (bug #8703).

--- a/po/ar.po
+++ b/po/ar.po
@@ -1166,7 +1166,7 @@ msgid "Enlightened Terminal Emulator"
 msgstr "محاكي ترفية Enlightened"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
+msgid "Evolution"
 msgstr "نوفيل إفولوشين"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
