--- a/po/bn.po
+++ b/po/bn.po
@@ -1164,7 +1164,7 @@ msgid "Enlightened Terminal Emulator"
 msgstr "টার্মিনাল ইমুলেটর এনলাইটেনড"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
+msgid "Evolution"
 msgstr "নভেল ইভোল্যুশন"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
