--- a/po/dz.po
+++ b/po/dz.po
@@ -1179,7 +1179,7 @@ msgid "Enlightened Terminal Emulator"
 msgstr "མཐར་འཁྱོལ་ཡོད་པའི་ཊལ་མི་ནཱལ་ནུས་འཕྲུལ།"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
+msgid "Evolution"
 msgstr "ནོ་བེལ་ཨི་བོ་ལུ་ཤཱན།"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
