--- a/po/eu.po
+++ b/po/eu.po
@@ -1184,8 +1184,8 @@ msgid "Enlightened Terminal Emulator"
 msgstr "Enlightened terminal emuladorea"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
-msgstr "Novell Evolution"
+msgid "Evolution"
+msgstr "Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
 msgid "Mozilla Firefox"
