--- a/po/ko.po
+++ b/po/ko.po
@@ -1177,7 +1177,7 @@ msgid "Enlightened Terminal Emulator"
 msgstr "가벼워진 터미널 에뮬레이터"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
+msgid "Evolution"
 msgstr "노벨 에볼루션"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
