--- a/po/ku.po
+++ b/po/ku.po
@@ -1109,7 +1109,7 @@ msgid "Enlightened Terminal Emulator"
 msgstr ""
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
+msgid "Evolution"
 msgstr ""
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
