--- a/po/pa.po
+++ b/po/pa.po
@@ -1163,7 +1163,7 @@ msgid "Enlightened Terminal Emulator"
 msgstr "ਇਨਲਾਈਟਮਿੰਟ ਟਰਮੀਨਲ ਈਮੂਲੇਟਰ"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
+msgid "Evolution"
 msgstr "ਨੋਵਲ ਈਵੂਲੇਸ਼ਨ"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
