--- a/po/uk.po
+++ b/po/uk.po
@@ -1180,8 +1180,8 @@ msgid "Enlightened Terminal Emulator"
 msgstr "Емулятор терміналу Enlightened"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
-msgstr "Переглядач пошти Novell Evolution"
+msgid "Evolution"
+msgstr "Переглядач пошти Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
 msgid "Mozilla Firefox"
