--- a/po/bg.po
+++ b/po/bg.po
@@ -1164,8 +1164,8 @@ msgid "Enlightened Terminal Emulator"
 msgstr "Enlightened Терминал"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
-msgstr "Novell Evolution"
+msgid "Evolution"
+msgstr "Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
 msgid "Mozilla Firefox"
