--- a/po/da.po
+++ b/po/da.po
@@ -1182,8 +1182,8 @@ msgid "Enlightened Terminal Emulator"
 msgstr "Enlightened Terminal Emulator"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
-msgstr "Novell Evolution"
+msgid "Evolution"
+msgstr "Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
 msgid "Mozilla Firefox"
