--- a/po/el.po
+++ b/po/el.po
@@ -1194,8 +1194,8 @@ msgid "Enlightened Terminal Emulator"
 msgstr "Προσομοίωση τερματικού Enlightenment"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
-msgstr "Novell Evolution"
+msgid "Evolution"
+msgstr "Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
 msgid "Mozilla Firefox"
