--- a/po/es.po
+++ b/po/es.po
@@ -1189,8 +1189,8 @@ msgid "Enlightened Terminal Emulator"
 msgstr "Emulador de Enlightened Terminal"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
-msgstr "Novell Evolution"
+msgid "Evolution"
+msgstr "Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
 msgid "Mozilla Firefox"
