--- a/po/hr.po
+++ b/po/hr.po
@@ -1141,8 +1141,8 @@ msgid "Enlightened Terminal Emulator"
 msgstr "a"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
-msgstr "Novell Evolution"
+msgid "Evolution"
+msgstr "Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
 msgid "Mozilla Firefox"
