--- a/po/is.po
+++ b/po/is.po
@@ -1159,7 +1159,7 @@ msgid "Enlightened Terminal Emulator"
 msgstr "Enlightened Skjáhermir"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
+msgid "Evolution"
 msgstr ""
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
