--- a/po/lv.po
+++ b/po/lv.po
@@ -1179,8 +1179,8 @@ msgid "Enlightened Terminal Emulator"
 msgstr "Enlightened termināla emulators"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
-msgstr "Novell Evolution"
+msgid "Evolution"
+msgstr "Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
 msgid "Mozilla Firefox"
