--- a/po/nb.po
+++ b/po/nb.po
@@ -1167,8 +1167,8 @@ msgid "Enlightened Terminal Emulator"
 msgstr "Enlightened Terminalemulator"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
-msgstr "Novell Evolution"
+msgid "Evolution"
+msgstr "Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
 msgid "Mozilla Firefox"
