--- a/po/pl.po
+++ b/po/pl.po
@@ -1177,8 +1177,8 @@ msgid "Enlightened Terminal Emulator"
 msgstr "Enlightened"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
-msgstr "Novell Evolution"
+msgid "Evolution"
+msgstr "Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
 msgid "Mozilla Firefox"
