--- a/po/pt.po
+++ b/po/pt.po
@@ -1178,8 +1178,8 @@ msgid "Enlightened Terminal Emulator"
 msgstr "Emulador de terminal Enlightened "
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
-msgstr "Novell Evolution"
+msgid "Evolution"
+msgstr "Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
 msgid "Mozilla Firefox"
