--- a/po/ru.po
+++ b/po/ru.po
@@ -1192,8 +1192,8 @@ msgid "Enlightened Terminal Emulator"
 msgstr "Эмулятор терминала Enlightened"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
-msgstr "Novell Evolution"
+msgid "Evolution"
+msgstr "Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
 msgid "Mozilla Firefox"
