--- a/po/ur_PK.po
+++ b/po/ur_PK.po
@@ -1178,7 +1178,7 @@ msgid "Enlightened Terminal Emulator"
 msgstr "انلائیٹینڈ ٹرمنل ایمولیٹر"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
+msgid "Evolution"
 msgstr "نوول ایولوشن"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
