--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1168,8 +1168,8 @@ msgid "Enlightened Terminal Emulator"
 msgstr "Enlightened 終端機模擬器"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
-msgid "Novell Evolution"
-msgstr "Novell Evolution"
+msgid "Evolution"
+msgstr "Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.in.h:1
 msgid "Mozilla Firefox"
