Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+0.8.0
+=====
+- Rename "Novell Evolution" to "Evolution" (bug #8703).
+- Add Iceweasel helper (bug #8704).
+- Translation updates: Arabic, Asturian, Belarusian, Bulgarian, 
+  Bengali, Catalan (Valencian), Czech, Welsh, Danish, German, Dzongkha, 
+  Greek, English (United Kingdom), Spanish (Castilian), Estonian, 
+  Basque, Finnish, French, Galician, Hebrew, Croatian, Hungarian, 
+  Indonesian, Icelandic, Italian, Japanese, Georgian, Kazakh, Korean, 
+  Kurdish, Lithuanian, Latvian, Macedonian, Norwegian Bokmal, Dutch 
+  (Flemish), Norwegian Nynorsk, Panjabi (Punjabi), Polish, Portuguese, 
+  Portuguese (Brazilian), Romanian, Russian, Sinhala, Slovak, 
+  Slovenian, Albanian, Swedish, Tagalog (Philippines), Turkish, Uyghur, 
+  Ukrainian, Urdu, Urdu (Pakistan), Chinese (China), Chinese (Taiwan).
+
 0.7.3
 =====
 - Enable startup-notify in the exo-open desktop files.
