Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+0.9.0
+=====
+- Add mnemonics to tab labels (bug #8972).
+- Add function to invert selection in icon view.
+- Don't invert direction in RTL languages (bug #4285).
+- Check if uris also contain a slash (bug #9244).
+- Set anchor item if the cursor is set.
+- Translation updates: Danish, Greek, Spanish (Castilian), Basque, 
+  French, Hebrew, Croatian, Hungarian, Indonesian, Italian, Kazakh, 
+  Korean, Dutch (Flemish), Polish, Portuguese, Portuguese (Brazilian), 
+  Russian, Serbian, Swedish, Uyghur, Ukrainian, Chinese (China), 
+  Chinese (Taiwan).
+
 0.8.0
 =====
 - Rename "Novell Evolution" to "Evolution" (bug #8703).
