Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+0.9.1
+=====
+- Drop the item index for the icon view.
+- Use unsigned int for idles and timeouts.
+- Add accessibility support to exo icon view.
+- Use new thread functions if available.
+- Avoid deprecation warnings.
+- Protect against null value (bug #9418).
+- Translation updates: German, Japanese, Serbian, Uyghur.
+
 0.9.0
 =====
 - Add mnemonics to tab labels (bug #8972).
