--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+0.10.0
+======
+- Bump glib to 2.30 and drop exo-gio-module.
+- Bump Gtk to 2.24.
+- Draw the rubberband identical to gtk (bug #9526).
+- Don't use GSimpleResult in ExoJob (bug #6222).
+- Fix shadowed variable (bug #9493).
+- Translation updates: Arabic, Czech, Croatian, Korean.
+
 0.9.1
 =====
 - Drop the item index for the icon view.
