Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+0.10.1
+======
+- g_main_context_ref_thread_default() is 2.32 API (bug #9577).
+- Reuild translations.
+- Translation updates: Romanian.
+
 0.10.0
 ======
 - Bump glib to 2.30 and drop exo-gio-module.
