Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+0.10.2
+======
+- Optimize returning the selected item in icon view.
+- Work with icon names in the toolbar editor.
+- GIO unix is still used for exo-open (bug #9679).
+- Use same thumbnail frame as Thunar.
+- Rename Terminal to xfce4-terminal.
+- Remove unmaintained translations.
+- Add chromium-browser to binary names (bug #9584).
+- Add various helpers.
+
 0.10.1
 ======
 - g_main_context_ref_thread_default() is 2.32 API (bug #9577).
