--- a/po/sl.po
+++ b/po/sl.po
@@ -13,7 +13,7 @@ msgstr ""
 "Last-Translator: Nenad Latinovi <nenadlatinovic@lavabit.com>\n"
 "Language-Team: Slovenian <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: \n"
 
