Update NEWS for 0.10.3

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,28 @@
+0.10.3
+======
+- Build updates and improvements (autotools, intltool)
+- Increased required automake and libtool versions
+- Updated mimeapps.list location for glib >= 2.41 (bug #11504)
+- Add an icon-column in the icon view for loading thumbnailed images
+- Add helpers for qtFM, QTerminal, Qupzilla, Surf, Vimprobable2 (bug #10216)
+- Add support for BCC in exo-compose-email (bug #11070)
+- Better handle filenames with spaces in exo-helpers (bug #10731)
+- Drop use of the -remote option in Firefox helpers (bug #11601)
+- Fix ATK deprecation warnings (bug #11556)
+- Fix exo_str_looks_like_an_uri() (bug #10098)
+- Fix small typo in exo-icon-bar (bug #10515)
+- Install category icons into proper location (bug #11364)
+- Scroll long file names into view in compact listview (bug #6014)
+- Translation updates: Albanian, Arabic, Asturian, Basque, Belarusian, Bengali,
+  Bulgarian, Catalan, Chinese (China), Chinese (Hong Kong), Chinese (Taiwan),
+  Croatian, Czech, Danish, Dutch (Flemish), English (Australia),
+  English (Great Britain), Estonian, Finnish, French, Galician, German, Greek,
+  Hebrew, Hungarian, Icelandic, Indonesian, Italian, Japanese, Kazakh, Korean,
+  Latvian, Lithuanian, Malay, Norwegian Bokmål, Norwegian Nynorsk, Occitan,
+  Panjabi, Polish, Portuguese, Portuguese (Brazilian), Romanian, Russian,
+  Serbian, Slovak, Slovenian, Spanish, Swedish, Telugu, Thai, Turkish,
+  Ukrainian, Urdu, Urdu (Pakistan), Uyghur, Vietnamese
+
 0.10.2
 ======
 - Optimize returning the selected item in icon view.
