Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+0.10.4
+======
+- Don't quote arguments passed to terminal emulators (bug #10731)
+- Fix StartupNotify (bug #9570)
+- Fix implicit declaration of function 'xfce_spawn_on_screen' (bug #11655)
+- Translation updates: Korean, Malay, Polish, German, Italian, Croatian
+
 0.10.3
 ======
 - Build updates and improvements (autotools, intltool)
