--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+0.10.5 (Next Release)
+======
+- Added --disable-debug to distcheck rules, this will allow building
+  with autogen.sh --disable-debug on newer systems (bug #11556)
+- Do not use x-scheme-handler/file mimetype (bug #7257)
+- Escape URIs for exo-open (bug #9912)
+- File descriptor was never opened if < 0 (CID #85387)
+- Reverted patches that broke window focus on startup (bug #11743)
+  - Fix StartupNotify (bug #9570)
+  - Fix implicit declaration of function 'xfce_spawn_on_screen' (bug #11655)
+- Translation updates: Basque, Greek, Lithuanian, Spanish, Swedish
+
 0.10.4
 ======
 - Don't quote arguments passed to terminal emulators (bug #10731)
