Updates for release

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 Benedikt Meurer <benny@xfce.org>
 Jannis Pohlmann <jannis@xfce.org>
 Nick Schermer <nick@xfce.org>
+Sean Davis <bluesabre@xfce.org>
 
 Parts of this library are based on code from libegg, Gtk+, the GNOME project
 and the ROX Filer.
