Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+0.10.7
+======
+- Correctly escape file names (bug #9912), fixing magnet links
+- Translation updates: Lithuanian, Swedish, Norwegian Nynorsk,
+  English (Australia), Asturian, Turkish
+
 0.10.6
 ======
 - Close fd with error state goto (CID 30797), extension of previous
