Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+0.11.0 (Development Release)
+======
+- This is the first release with initial GTK+3 support. This initial
+  port is thanks to Nick Schermer and Jonas Kümmerlin, who provided
+  all necessary components. As this is an initial release, expect to
+  find bugs or even wholly incomplete functionality.
+- Translation updates: Asturian, Basque, Bulgarian, Catalan, French,
+  German, Greek, Hebrew, Hungarian, Icelandic, Japanese, Korean,
+  Lithuanian, Occitan, Panjabi, Portuguese (Brazil), Russian, Slovak,
+  Slovenian, Spanish, Swedish, Turkish, Ukrainian
+
 0.10.7
 ======
 - Correctly escape file names (bug #9912), fixing magnet links
