Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+0.11.1 (Development Release)
+======
+- This release addresses a new bug introduced in 0.11.0 where exo
+  did not correctly export the user's environment variables.
+- Translation updates: Chinese (China), Croatian, Swedish
+
 0.11.0 (Development Release)
 ======
 - This is the first release with initial GTK+3 support. This initial
