Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+0.11.2 (Development Release)
+======
+- Several improvements from f2404:
+  - Remove unused struct member
+  - Check index range before accessing array	
+  - Do not assign value twice
+  - Resolve gdk_cursor_* deprecated warnings
+  - Resolve gdk_threads_* deprecated warnings
+- Fixed vertical alignment of options in preferred applications	
+- Fixed issue with Thunar detailed view losing selection (Xfce #12916)
+- Translation updates: Asturian, English (Australia), Italian, Kazakh, 
+  Lithuanian, Malay, Polish, Portuguese, Romanian, Russian, Thai
+
 0.11.1 (Development Release)
 ======
 - This release addresses a new bug introduced in 0.11.0 where exo
