--- a/THANKS
+++ b/THANKS
@@ -1,3 +1,12 @@
+Thanks to all the individuals that have contributed to the development of Exo.
+Since this project started, there have been so many contributors it has become
+unmaintainable to list each individually, but the original contributors are
+listed below.
+
+For contributions on a commit basis, please see the ChangeLog file.
+
+---
+
 What's this file about?
 -----------------------
 This file lists all external people that have contributed to this project and
@@ -60,7 +69,7 @@ These people have translated libexo to foreign languages.
 
  Peeter Vois <peeter.vois@proekspert.ee>
   * et translations
- 
+
  Piarres Beobide <pi@beobide.net>
   * eu translations
 
@@ -164,4 +173,3 @@ Other contributers (sorted by name):
 
 Matt McClinch <mattmcclinch@gmail.com>
  * ExoIconView patches
-
