--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+0.12.0 (Stable Release)
+======
+- Bug Fixes:
+  - Add google-chrome-stable binary for the google-chrome helper (Xfce #13876)
+- Translation Updates: Albanian, Amharic, Arabic, Asturian, Basque,
+  Belarusian, Bengali, Bulgarian, Catalan, Chinese (China),
+  Chinese (Hong Kong), Chinese (Taiwan), Croatian, Czech, Danish, Dutch,
+  English (Australia), English (United Kingdom), Estonian, Finnish, French,
+  Galician, German, Greek, Hebrew, Hungarian, Icelandic, Indonesian, Italian,
+  Japanese, Kannada, Kazakh, Korean, Latvian, Lithuanian, Malay,
+  Norwegian Bokmal, Norwegian Nynorsk, Occitan (post 1500), Panjabi (Punjabi),
+  Polish, Portuguese, Portuguese (Brazil), Romanian, Russian, Serbian,
+  Sinhala, Slovak, Slovenian, Spanish, Swedish, Telugu, Thai, Turkish, Uighur,
+  Ukrainian, Urdu, Urdu (Pakistan), Vietnamese
+
 0.11.5 (Development Release)
 ======
 - New Features:
