Updates for release

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@
 ======
 - Bug Fixes:
   - Add google-chrome-stable binary for the google-chrome helper (Xfce #13876)
+- Build Changes:
+  - Requirements updated: GTK 2.24, GTK 3.22, GLib 2.42, libxfce4ui 4.12,
+    libxfce4util 4.12
 - Translation Updates: Albanian, Amharic, Arabic, Asturian, Basque,
   Belarusian, Bengali, Bulgarian, Catalan, Chinese (China),
   Chinese (Hong Kong), Chinese (Taiwan), Croatian, Czech, Danish, Dutch,
