Add PCManFM-Qt helper and translations (bug 14333)
Signed-off-by: Sean Davis <smd.seandavis@gmail.com>

--- a/po/ca.po
+++ b/po/ca.po
@@ -1250,6 +1250,10 @@ msgstr "NXterm"
 msgid "Opera Browser"
 msgstr "Navegador Opera"
 
+#: ../exo-helper/helpers/pcmanfm-qt.desktop.in.in.h:1
+msgid "PCManFM-Qt File Manager"
+msgstr "Gestor de fitxers PCManFM-Qt"
+
 #: ../exo-helper/helpers/pcmanfm.desktop.in.in.h:1
 msgid "PCMan File Manager"
 msgstr "Gestor de fitxers PCMan"
