--- a/po/fr.po
+++ b/po/fr.po
@@ -1256,6 +1256,10 @@ msgstr "NXterm"
 msgid "Opera Browser"
 msgstr "Navigateur Opera"
 
+#: ../exo-helper/helpers/pcmanfm-qt.desktop.in.in.h:1
+msgid "PCManFM-Qt File Manager"
+msgstr "PCManFM-Qt"
+
 #: ../exo-helper/helpers/pcmanfm.desktop.in.in.h:1
 msgid "PCMan File Manager"
 msgstr "Gestionnaire de fichiers PCMan"
