--- a/po/lt.po
+++ b/po/lt.po
@@ -1249,6 +1249,10 @@ msgstr "NXterm"
 msgid "Opera Browser"
 msgstr "Opera naršyklė"
 
+#: ../exo-helper/helpers/pcmanfm-qt.desktop.in.in.h:1
+msgid "PCManFM-Qt File Manager"
+msgstr "PCManFM-Qt failų tvarkytuvė"
+
 #: ../exo-helper/helpers/pcmanfm.desktop.in.in.h:1
 msgid "PCMan File Manager"
 msgstr "PCMan failų tvarkytuvė"
