--- a/po/pl.po
+++ b/po/pl.po
@@ -1253,6 +1253,10 @@ msgstr "NXterm"
 msgid "Opera Browser"
 msgstr "Opera"
 
+#: ../exo-helper/helpers/pcmanfm-qt.desktop.in.in.h:1
+msgid "PCManFM-Qt File Manager"
+msgstr "Menedżer plików PCManFM-Qt"
+
 #: ../exo-helper/helpers/pcmanfm.desktop.in.in.h:1
 msgid "PCMan File Manager"
 msgstr "PCMan File Manager"
