--- a/po/pt.po
+++ b/po/pt.po
@@ -1247,6 +1247,10 @@ msgstr "NXTerm"
 msgid "Opera Browser"
 msgstr "Navegador Opera"
 
+#: ../exo-helper/helpers/pcmanfm-qt.desktop.in.in.h:1
+msgid "PCManFM-Qt File Manager"
+msgstr "Gestor de ficheiros PCManFM-Qt"
+
 #: ../exo-helper/helpers/pcmanfm.desktop.in.in.h:1
 msgid "PCMan File Manager"
 msgstr "Gestor de ficheiros PCMan"
