--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1254,6 +1254,10 @@ msgstr "NXTerm"
 msgid "Opera Browser"
 msgstr "Navegador Opera"
 
+#: ../exo-helper/helpers/pcmanfm-qt.desktop.in.in.h:1
+msgid "PCManFM-Qt File Manager"
+msgstr "Gerenciador de Arquivos PCManFM-Qt"
+
 #: ../exo-helper/helpers/pcmanfm.desktop.in.in.h:1
 msgid "PCMan File Manager"
 msgstr "Gerenciador de arquivos PCManFM"
