--- a/po/ru.po
+++ b/po/ru.po
@@ -1255,6 +1255,10 @@ msgstr "NXterm"
 msgid "Opera Browser"
 msgstr "Браузер Opera"
 
+#: ../exo-helper/helpers/pcmanfm-qt.desktop.in.in.h:1
+msgid "PCManFM-Qt File Manager"
+msgstr "Диспетчер файлов PCManFM-Qt"
+
 #: ../exo-helper/helpers/pcmanfm.desktop.in.in.h:1
 msgid "PCMan File Manager"
 msgstr "Файловый менеджер PCMan"
