--- a/po/tr.po
+++ b/po/tr.po
@@ -1252,6 +1252,10 @@ msgstr "NXterm"
 msgid "Opera Browser"
 msgstr "Opera Browser"
 
+#: ../exo-helper/helpers/pcmanfm-qt.desktop.in.in.h:1
+msgid "PCManFM-Qt File Manager"
+msgstr "PCManFM-Qt"
+
 #: ../exo-helper/helpers/pcmanfm.desktop.in.in.h:1
 msgid "PCMan File Manager"
 msgstr "PCMan Dosya Yöneticisi"
