--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1254,6 +1254,10 @@ msgstr "NXterm"
 msgid "Opera Browser"
 msgstr "Opera 浏览器"
 
+#: ../exo-helper/helpers/pcmanfm-qt.desktop.in.in.h:1
+msgid "PCManFM-Qt File Manager"
+msgstr "PCManFM-Qt 文件管理器"
+
 #: ../exo-helper/helpers/pcmanfm.desktop.in.in.h:1
 msgid "PCMan File Manager"
 msgstr "PCMan 文件管理器"
