--- a/po/ar.po
+++ b/po/ar.po
@@ -1250,6 +1250,10 @@ msgstr "NXterm"
 msgid "Opera Browser"
 msgstr "متصفح أوبيرا"
 
+#: ../exo-helper/helpers/pcmanfm-qt.desktop.in.in.h:1
+msgid "PCManFM-Qt File Manager"
+msgstr "مدير الملفّات PCManFM-Qt"
+
 #: ../exo-helper/helpers/pcmanfm.desktop.in.in.h:1
 msgid "PCMan File Manager"
 msgstr "PCMan مدير الملفات"
