--- a/po/es.po
+++ b/po/es.po
@@ -1256,6 +1256,10 @@ msgstr "NXterm"
 msgid "Opera Browser"
 msgstr "Navegador web Opera"
 
+#: ../exo-helper/helpers/pcmanfm-qt.desktop.in.in.h:1
+msgid "PCManFM-Qt File Manager"
+msgstr "Gestor de archivos PCManFM-Qt"
+
 #: ../exo-helper/helpers/pcmanfm.desktop.in.in.h:1
 msgid "PCMan File Manager"
 msgstr "Administrador de archivos PCMan"
