--- a/po/it.po
+++ b/po/it.po
@@ -1249,6 +1249,10 @@ msgstr "NXterm"
 msgid "Opera Browser"
 msgstr "Opera Browser"
 
+#: ../exo-helper/helpers/pcmanfm-qt.desktop.in.in.h:1
+msgid "PCManFM-Qt File Manager"
+msgstr "Gestore file PCManFM-Qt"
+
 #: ../exo-helper/helpers/pcmanfm.desktop.in.in.h:1
 msgid "PCMan File Manager"
 msgstr "Gestore dei file PCMan"
