Manually apply da translation for pcmanfm-qt

--- a/po/da.po
+++ b/po/da.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# 
+#
 # Translators:
 # Aputsiak Niels Janussen (Skjalden) <aj@isit.gl>, 2013,2015
 # Aputsiak Niels Janussen (Skjalden) <aj@isit.gl>, 2013,2015
@@ -1249,6 +1249,10 @@ msgstr "NXterm"
 #: ../exo-helper/helpers/opera-browser.desktop.in.in.h:1
 msgid "Opera Browser"
 msgstr "Opera Browser"
+
+#: ../exo-helper/helpers/pcmanfm-qt.desktop.in.in.h:1
+msgid "PCManFM-Qt File Manager"
+msgstr "PCManFM-Qt-filhåndtering"
 
 #: ../exo-helper/helpers/pcmanfm.desktop.in.in.h:1
 msgid "PCMan File Manager"
