WIP release notes

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+0.12.1 (Stable, UNRELEASED)
+======
+- Bug Fixes:
+  - Use "user-bookmarks" instead of "bookmark-new" (Xfce #14243)
+  - Properly scale application icons in Preferred Apps dialog (Xfce #14362)
+  - Remove pure attribute of function that returns void (Xfce #14427)
+  - Missing varargs init or cleanup (CID #30799)
+  - Uninitialized scalar variable (CID #127777)
+- Compiler Support (GCC 7):
+  - Disable -Wexpansion-to-defined
+  - Fix various other compiler warnings
+- Helpers:
+  - Add PCManFM-Qt (from LXQt) to supported file managers (Xfce #14333)
+- ExoIconChooserDialog
+  - Drop deprecated International icon context, add Stock icon context
+  - Increase icon chooser context title length to support long translations
+  - Skip symbolic icons to boost performance
+
 0.12.0 (Stable Release)
 ======
 - Bug Fixes:
