Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-0.12.1 (Stable, UNRELEASED)
+0.12.1 (Stable Release)
 ======
 - Bug Fixes:
   - Use "user-bookmarks" instead of "bookmark-new" (Xfce #14243)
@@ -17,6 +17,10 @@
   - Increase icon chooser context title length to support long translations
   - Skip symbolic icons to boost performance
   - Added GTK 3 test to test suite
+- Translation Updates: Albanian, Amharic, Belarusian, Bulgarian, Catalan,
+  Chinese (China), Chinese (Taiwan), Czech, Danish, Dutch, English (Australia),
+  Finnish, French, Galician, Greek, Hebrew, Hungarian, Italian, Polish,
+  Portuguese, Russian, Slovak, Swedish, Turkish
 
 0.12.0 (Stable Release)
 ======
