Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+0.12.2 (Stable Release)
+======
+- Bug Fixes:
+  - Fix crash with ExoJob, Thunar (Xfce #14465)
+- Translation updates: Chinese (China), Danish
+
 0.12.1 (Stable Release)
 ======
 - Bug Fixes:
