WIP release notes

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+0.12.3 (Unreleased)
+======
+- General:
+  - Preferred Applications: Improved layout spacing and alignment
+- Bug Fixes:
+  - Hide exo launchers from GNOME Software (Xfce #14588)
+  - Fix crash with "preedit-changed" signal (Xfce #14756)
+- Translation updates: Albanian, Amharic, Arabic, Asturian, Basque,
+  Belarusian, Bengali, Bulgarian, Catalan, Chinese (China),
+  Chinese (Hong Kong), Chinese (Taiwan), Croatian, Czech, Danish,
+  Dutch, English (Australia), Estonian, Finnish, French, Galician,
+  German, Greek, Hebrew, Hungarian, Icelandic, Indonesian, Italian,
+  Japanese, Kazakh, Korean, Latvian, Lithuanian, Malay, Norwegian Bokmål,
+  Norwegian Nynorsk, Occitan (post 1500), Panjabi (Punjabi), Polish,
+  Portuguese, Portuguese (Brazil), Romanian, Russian, Serbian, Slovak,
+  Slovenian, Spanish, Swedish, Telugu, Thai, Turkish, Uighur, Ukrainian,
+  Urdu, Urdu (Pakistan), Vietnamese
+
 0.12.2 (Stable Release)
 ======
 - Bug Fixes:
