Remove dependency on gio-unix-2.0 (bug #15825)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0.12.9 (UNRELEASED)
+======
+- Remove dependency on gio-unix-2.0 (Xfce #15825)
+
 0.12.8
 ======
 - preferred-apps: Add button icons to Help/Close
