Hide search widget when doing a fullscreen resize (bug #15106)

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@
 - Fix cursor missing in search popup widget (Xfce #16068)
 - Fix excess clickable area of multiline filenames (Xfce #16075)
 - Fix alignment of multi-line filenames when text beside icons (Xfce #16107)
+- Hide search widget when doing a fullscreen resize (Xfce #15106)
 - Make user-created launchers executable by default
 
 0.12.8
