Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,14 +1,18 @@
-0.12.9 (UNRELEASED)
+0.12.9
 ======
-- Explicitly depend on gio-unix-2.0 (Xfce #15825)
-- Fix issues with displaying icon view contents (Xfce #14737)
-- Fix desktop item creation on symbolic link directories
-- Fix prelight deactivation (Xfce #11806)
-- Fix cursor missing in search popup widget (Xfce #16068)
-- Fix excess clickable area of multiline filenames (Xfce #16075)
-- Fix alignment of multi-line filenames when text beside icons (Xfce #16107)
-- Hide search widget when doing a fullscreen resize (Xfce #15106)
-- Make user-created launchers executable by default
+- Bug Fixes:
+  - Explicitly depend on gio-unix-2.0 (Xfce #15825)
+  - Fix alignment of multi-line filenames when text beside icons (Xfce #16107)
+  - Fix cursor missing in search popup widget (Xfce #16068)
+  - Fix desktop item creation on symbolic link directories
+  - Fix excess clickable area of multiline filenames (Xfce #16075)
+  - Fix issues with displaying icon view contents (Xfce #14737)
+  - Fix prelight deactivation (Xfce #11806)
+  - Hide search widget when doing a fullscreen resize (Xfce #15106)
+  - Make user-created launchers executable by default
+- Translation Updates:
+  Croatian, English (United Kingdom), French, Galician, Korean,
+  Slovenian, Swedish
 
 0.12.8
 ======
