Replace bugzilla occurences with gitlab (fixes #30)

--- a/README
+++ b/README
@@ -45,7 +45,7 @@ How to report bugs?
 ===================
 
 Bugs should be reported to the Xfce bug tracking system
-(https://bugzilla.xfce.org, product Exo). You will need
+(https://gitlab.xfce.org/xfce/exo/-/issues). You will need
 to create an account for yourself.
 
 Please read the HACKING file for information on where to send changes
