--- a/HACKING
+++ b/HACKING
@@ -1,7 +1,7 @@
 Bug tracking system
 ===================
 
-libexo uses the bug tracking system at https://bugzilla.xfce.org/
+libexo uses the bug tracking system at https://gitlab.xfce.org/xfce/exo/-/issues
 hosted and maintained by the Xfce project.
 
 
@@ -16,14 +16,14 @@ Please and send a patch against a recent version of this package. Patches
 against the Git master branch are most preferable. You can always
 access the master branch from
 
-  https://git.xfce.org/xfce/exo
+  https://gitlab.xfce.org/xfce/exo
 
 
 Feature requests
 ================
 
 Please file feature requests to the Xfce bug tracking system
-(https://bugzilla.xfce.org, product Exo) with a Severity of
+(https://gitlab.xfce.org/xfce/exo/-/issues) with a Severity of
 enhancement. Make sure that your feature request wasn't reported
 already before; requesting a feature several times won't increase
 the chance that it gets added.
