Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+4.15.2
+======
+- icon-chooser-dialog: Allow removing selected icon (Fixes #2)
+- desktop-item-edit: Fix sensitivity of save button (Fixes #28)
+- Rework exo_icon_view_scroll_event for overshoot effect (Fixes #25)
+- Allow resizing the xfce4-settings window smaller (Fixes #19)
+- Drop exo-csource from exo
+- Fix build on OpenBSD (!2)
+- Fix race condition in make install (Fixes #29)
+- Remove unused perl module requirement
+- Replace bugzilla occurences with gitlab (Fixes #30)
+- Translation Updates:
+  Albanian, Chinese (China), Chinese (Hong Kong), Danish, Eastern
+  Armenian, French, German, Hebrew, Japanese, Kazakh, Korean, Lithuanian,
+  Portuguese, Portuguese (Brazil), Russian, Swedish, Turkish
+
 4.15.1
 ======
 This release transitions several exo components to xfce-settings.
